test/regress/cov6-txact-negative-cost.test
; Coverage for textual_xacts.cc negative cost

2024/01/01 Test
    Expenses:Food    100 EUR @ -$1.10
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 4:
While parsing posting:
  Expenses:Food    100 EUR @ -$1.10
                             ^^^^^^
Error: A posting's cost may not be negative
end test
